--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <section class="contact">
             <div class="modal">
         <div class="modal__content">
-      <button class="contact__btn" onclick="openModal(event)">
-            <span class="close-button" onclick="closeModal(event)">&times;</span></button>
+      <button class="contact__btn" onclick="toggleModal(event)">
+            <span class="close-button">&times;</span></button>
             <h2>Contact Us</h2>
             <form id="contact__form" onSubmit="contact()">
                 <label for="name">Name:</label>
