--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <figure>
                 <img id="logo" src="assets/pngtree-flower-pot-and-plant-logo-growth-vector-logo-image_322946.jpg" alt="">
             </figure>
-            <ul class="nav__link--list" onclick="goToPage()">
+            <ul class="nav__link--list" onclick="toggleModal()">
                 <li class="nav__link">
                     <a href="#" class="
                     nav__link--anchor
@@ -58,7 +58,7 @@
         <section class="contact">
             <div class="modal">
         <div class="modal__content">
-      <button class="contact__btn" onclick="toggleModal(event)">
+      <button class="contact__btn" onclick="toggleModal()">
             <span class="close-button">&times;</span></button>
             <h2>Contact Us</h2>
             <form id="contact__form" onSubmit="contact()">
