--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     >Home</a>
                 </li>
                 <li class="nav__link" onclick="getPlants()">
-                    <a href="#" class="
+                    <a href="" target="_blank" class="
                     nav__link--anchor
                     link__hover--effect"
                     >Find a Plant</a>
@@ -55,8 +55,6 @@
                 </figure>
         </div>
       </header>
-
-      
         <section class="contact">
             <div class="modal">
         <div class="modal__content">
