--- a/plant.html
+++ b/plant.html
@@ -73,8 +73,12 @@
        <section id="plant-section">
             <h2 class="plant__section">Plant List</h2>
             <div id="plant-list"></div>
-    </section>
-</body>       
+        </section>
+        <section id="plants">
+            
+        </section>
+</body>  
+   
       <footer>
         <div class="footer__plants">
             <p>&copy; 2025 Plants. All rights reserved.</p>
