--- a/plant.html
+++ b/plant.html
@@ -70,10 +70,14 @@
         </div>        
       </div>
       </section> 
+      
        <section id="plant-section">
-            <h2 class="plant__section">Plant List</h2>
-            <div id="plant-list"></div>
+            <div id="plant-list">
+                <h2 class="plant__section">Plant List</h2>
+            </div>
         </section>
+
+
         <section id="plants">
             
         </section>
