--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       });
    })();
 </script>
+<script src="https://kit.fontawesome.com/f747adbd66.js" crossorigin="anonymous">
+</script>
     <title>Plants</title>
 </head>
 <body>
