--- a/plant.html
+++ b/plant.html
@@ -15,6 +15,8 @@
       });
    })();
 </script>
+<script src="https://kit.fontawesome.com/f747adbd66.js" crossorigin="anonymous">
+</script>
     <title>Plant List</title>
 </head>
 <body>
@@ -70,7 +72,7 @@
         </div>        
       </div>
       </section> 
-      
+
        <section id="plant-section">
             <div id="plant-list">
                 <h2 class="plant__section">Plant List</h2>
