--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </script>
 <script src="https://kit.fontawesome.com/f747adbd66.js" crossorigin="anonymous">
 </script>
+<script defer src="index.js"></script>
     <title>Plants</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
         <div class="header__content">
             <h1>Welcome to the <span class="green">&nbsp;Plants</span>&nbspPage</h1>
                 <h2 class="header">Here you can find information about various <span class="green">&nbspplants.</span></h2>
-                <div class="input-wrapper"><input type="text" placeholder="Search by Name, Species or Keyword" fdprocessedid="st2mwuo">
+                <div class="input-wrapper"><input type="text" id="search-input" placeholder="Search by Name, Species or Keyword" fdprocessedid="st2mwuo">
                 <button id="search-btn" class="not-loading">Search</button>
                 </div>
                 <figure class="Valleyscape">
