--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
@@ -58,6 +57,7 @@
                 </figure>
         </div>
       </header>
+      <section id="plant-list" class="plant-list"></section>
         <section class="contact">
             <div class="modal">
         <div class="modal__content">
