--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    <script defer src="index.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
-<script type="text/javascript">
+<script type="text/javascript"></script>
    (function(){
       emailjs.init({
         publicKey: "zR-THbpDpBHlifJe2",
@@ -16,7 +16,6 @@
 </script>
 <script src="https://kit.fontawesome.com/f747adbd66.js" crossorigin="anonymous">
 </script>
-<script defer src="index.js"></script>
     <title>Plants</title>
 </head>
 <body>
